--- a/css/defaults/_variables.scss
+++ b/css/defaults/_variables.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 @import url('../../fonts/RINGM___.TTF');
 
-$bg-main-color: #171717;
-$bg-second-color: #1e1e1e;
+$bg-main-color: #1e1f24;
+$bg-second-color: #2b2b30;
 $text-color: #fff;
 $font-size: 62.5%;
 $font-family: "Poppins", sans-serif;
