--- a/css/defaults/_classes.scss
+++ b/css/defaults/_classes.scss
@@ -15,3 +15,12 @@
 .hidden {
     display: none;
 }
+
+.shown {
+    display: flex;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
