--- a/css/pages/_characters.scss
+++ b/css/pages/_characters.scss
@@ -25,11 +25,16 @@
         }
     }
 
+.grid {
+    gap: 0.5rem;
+}
+
 .character-button {
         border: none;
         min-width: 100%;
-        margin: 1rem;
+        margin: 1rem 0;
         border-radius: 1rem;
+        box-sizing: border-box;
         color: white;
         background-color: $bg-second-color;
         font-size: 3rem;
@@ -51,6 +56,236 @@
         max-width: 100%;
         margin: 0 auto;
         margin-top: $margin-lg;
+    
+        div > label {
+            font-size: 1.6rem;
+        }
+    }
+    
+    .search-container {
+        align-items: center;
+        max-width: 100%;
+        gap: 2rem;
+        justify-content: center;
+    
+        input {
+            background-color: $bg-second-color;
+            border: none;
+            box-sizing: border-box;
+            padding: 1rem;
+            font-size: 1.6rem;
+            border-radius: 0.5rem;
+            outline: none;
+            color: white;
+            max-width: 100%;
+    
+            &:hover,:active,:focus,:checked {
+                background-color: #372f43;
+                box-shadow: 0px 0px 5px 0px #695b8b;
+            }
+        }
+    }
+    
+    hr {
+        border: none;
+        border-top: 1px solid gray;
+        margin-top: $margin-lg;
+    }
+}
+
+.loading {
+    font-size: 4rem;
+    animation: 3s infinite rotate;
+    margin: 0 auto;
+    width: fit-content;
+    min-height: 100%;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@media (width > 600px) and (width < 840px) {
+    .character {
+        min-width: 100%;
+        background-color: $bg-second-color;
+        height: fit-content;
+        border-radius: 1rem;
+        margin: 1rem 0;
+        box-sizing: border-box;
+        padding: 1rem;
+        gap: 1rem;
+
+        h4 {
+            font-family: 'Ringbearer', sans-serif;
+            font-size: 2.4rem;
+        }
+
+        a {
+            color: #9473e0;
+            font-size: 1.2rem;
+        }
+
+        div {
+            gap: 0.5rem;
+            align-items: center;
+        }
+    }
+
+.grid {
+    gap: 0.5rem;
+}
+
+.character-button {
+        border: none;
+        min-width: 100%;
+        margin: 1rem 0;
+        border-radius: 1rem;
+        box-sizing: border-box;
+        color: white;
+        background-color: $bg-second-color;
+        font-size: 3rem;
+
+        &:hover,:active,:checked,:focus {
+            background-color: #372f43;
+            box-shadow: 0px 0px 5px 0px #695b8b;
+        }
+}
+    
+    .character-container {
+        min-width: 100%;
+        min-height: 100%;
+        margin-bottom: 12rem;
+    }
+    
+    .filter {
+        gap: 1.5rem;
+        max-width: 100%;
+        margin: 0 auto;
+        margin-top: $margin-lg;
+    
+        div > label {
+            font-size: 1.6rem;
+        }
+    }
+    
+    .search-container {
+        align-items: center;
+        max-width: 100%;
+        gap: 2rem;
+        justify-content: center;
+    
+        input {
+            background-color: $bg-second-color;
+            border: none;
+            box-sizing: border-box;
+            padding: 1rem;
+            font-size: 1.6rem;
+            border-radius: 0.5rem;
+            outline: none;
+            color: white;
+            max-width: 100%;
+    
+            &:hover,:active,:focus,:checked {
+                background-color: #372f43;
+                box-shadow: 0px 0px 5px 0px #695b8b;
+            }
+        }
+    }
+    
+    hr {
+        border: none;
+        border-top: 1px solid gray;
+        margin-top: $margin-lg;
+    }
+}
+
+.loading {
+    font-size: 4rem;
+    animation: 3s infinite rotate;
+    margin: 0 auto;
+    width: fit-content;
+    min-height: 100%;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@media (width >= 840px) {
+    .character {
+        min-width: 100%;
+        background-color: $bg-second-color;
+        height: fit-content;
+        border-radius: 1rem;
+        margin: 1rem 0;
+        box-sizing: border-box;
+        padding: 1rem;
+        gap: 1rem;
+
+        h4 {
+            font-family: 'Ringbearer', sans-serif;
+            font-size: 2.4rem;
+        }
+
+        a {
+            color: #9473e0;
+            font-size: 1.2rem;
+        }
+
+        div {
+            gap: 0.5rem;
+            align-items: center;
+        }
+    }
+
+.grid {
+    gap: 2.4rem;
+}
+
+.character-button {
+        border: none;
+        min-width: 60%;
+        max-width: 80%;
+        margin: 1rem 0;
+        border-radius: 1rem;
+        box-sizing: border-box;
+        color: white;
+        background-color: $bg-second-color;
+        font-size: 3rem;
+
+        &:hover,:active,:checked,:focus {
+            background-color: #372f43;
+            box-shadow: 0px 0px 5px 0px #695b8b;
+        }
+}
+
+.grid {
+    justify-items: end;
+}
+    
+.character-container {
+        min-width: 100%;
+        min-height: 100%;
+        margin-bottom: 12rem;
+}
+    
+    .filter {
+        gap: 1.5rem;
+        max-width: 100%;
+        margin: 0 auto;
+        margin-top: $margin-lg;
+        align-items: flex-start;
     
         div > label {
             font-size: 1.6rem;
