--- a/css/main.css
+++ b/css/main.css
@@ -129,14 +129,12 @@ a:hover {
 @media (width >= 840px) {
   .navbar {
     font-size: 1.4rem;
-    width: 10rem;
-    position: fixed;
-    top: 33.3333333333%;
+    min-width: 100%;
+    top: 0;
     left: 0;
   }
   .navbar ul {
     justify-content: space-evenly;
-    flex-direction: column;
     gap: 2rem;
     min-width: 100%;
     margin: 2.4rem 0;
