--- a/css/pages/_index.scss
+++ b/css/pages/_index.scss
@@ -144,3 +144,12 @@
         background-color: #372f43;
     }
 }
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #e1e1e1;
+}
