--- a/css/defaults/_variables.scss
+++ b/css/defaults/_variables.scss
@@ -13,3 +13,5 @@ $font-family: "Poppins", sans-serif;
 $margin-lg: 2.4rem;
 $margin-sm: 1.6rem;
 $link-color: #9473e0;
+$text-size-sm: 1.6rem;
+$text-size-lg: 2.4rem;
