--- a/css/main.css
+++ b/css/main.css
@@ -249,26 +249,51 @@ body {
   .container {
     gap: 5rem;
     align-items: center;
+    justify-content: center;
     width: 70%;
     margin: 0 auto;
-    margin-top: 4rem;
   }
   .container p {
     font-size: 1.6rem;
   }
   .hero {
     margin-top: 2.5rem;
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+    align-content: center;
+    gap: 5rem;
   }
   .hero h1 {
-    font-size: 3rem;
+    font-size: 5rem;
     font-family: "Ringbearer";
     text-align: center;
+    box-sizing: content-box;
+  }
+  .topic-animation:nth-child(2) {
+    transition-delay: 200ms;
+  }
+  .topic-animation:nth-child(3) {
+    transition-delay: 400ms;
+  }
+  .obs-hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 2s;
+  }
+  .obs-show {
+    opacity: 1;
+    filter: blur(0px);
+    transform: translateX(0%);
   }
   .topics-container {
     gap: 2.5%;
     min-width: 100%;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    min-height: 100vh;
   }
   .topics-container a {
     width: 100%;
@@ -526,6 +551,20 @@ a:hover {
   }
 }
 @media (width >= 840px) {
+  .hero-character {
+    margin-top: 2.5rem;
+    display: grid;
+    place-items: center;
+    align-content: center;
+    gap: 5rem;
+    margin: 5% 0;
+  }
+  .hero-character h1 {
+    font-size: 5rem;
+    font-family: "Ringbearer";
+    text-align: center;
+    box-sizing: content-box;
+  }
   .character {
     min-width: 100%;
     background-color: #2b2b30;
@@ -646,6 +685,21 @@ a:hover {
 }
 .specific-character a {
   color: #9473e0;
+}
+
+.hero-character {
+  margin-top: 2.5rem;
+  display: grid;
+  place-items: center;
+  align-content: center;
+  gap: 5rem;
+  margin: 5% 0;
+}
+.hero-character h1 {
+  font-size: 5rem;
+  font-family: "Ringbearer";
+  text-align: center;
+  box-sizing: content-box;
 }
 
 #back {
