--- a/css/pages/_details.scss
+++ b/css/pages/_details.scss
@@ -11,6 +11,22 @@
     }
 }
 
+.hero-character {
+    margin-top: 2.5rem;
+    display: grid;
+    place-items: center;
+    align-content: center;
+    gap: 5rem;
+    margin: 5% 0;
+
+    h1 {
+        font-size: 5rem;
+        font-family: 'Ringbearer';
+        text-align: center;
+        box-sizing: content-box;
+    }
+}
+
 #back {
     background-color: $bg-second-color;
     border: none;
