--- a/css/pages/_index.scss
+++ b/css/pages/_index.scss
@@ -95,9 +95,9 @@
     .container {
         gap: 5rem;
         align-items: center;
+        justify-content: center;
         width: 70%;
         margin: 0 auto;
-        margin-top: 4rem;
     
         p {
             font-size: 1.6rem;
@@ -106,12 +106,38 @@
 
     .hero {
         margin-top: 2.5rem;
+        min-height: 100vh;
+        display: grid;
+        place-items: center;
+        align-content: center;
+        gap: 5rem;
     
         h1 {
-            font-size: 3rem;
+            font-size: 5rem;
             font-family: 'Ringbearer';
             text-align: center;
+            box-sizing: content-box;
         }
+    }
+
+    .topic-animation:nth-child(2) {
+        transition-delay: 200ms;
+    }
+    .topic-animation:nth-child(3) {
+        transition-delay: 400ms;
+    }
+
+    .obs-hidden {
+        opacity: 0;
+        filter: blur(5px);
+        transform: translateX(-100%);
+        transition: all 2s;
+    }
+    
+    .obs-show {
+        opacity: 1;
+        filter: blur(0px);
+        transform: translateX(0%);
     }
 
     .topics-container {
@@ -119,6 +145,8 @@
         min-width: 100%;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
+        min-height: 100vh;
 
         a {
             width: 100%;
