--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,12 @@
-@import "./defaults/reset";
-@import "./defaults/variables";
-@import "./defaults/layout";
-@import "./components/navbar";
-@import "./defaults/classes";
-@import "./components/footer";
-@import "./pages/index";
-@import "./pages/characters";
-@import "./pages/details";
+@import "../scss/defaults/reset";
+@import "../scss/defaults/variables";
+@import "../scss/defaults/layout";
+@import "../scss/components/navbar";
+@import "../scss/defaults/classes";
+@import "../scss/components/footer";
+@import "../scss/pages/characters";
+@import "../scss/pages/details";
+@import "../scss/defaults/container";
+@import "../scss/defaults/card";
+@import "../scss/defaults/form";
+@import "../scss/defaults/topic";
