--- a/scss/defaults/_variables.scss
+++ b/scss/defaults/_variables.scss
@@ -7,11 +7,16 @@
 
 $bg-main-color: #1e1f24;
 $bg-second-color: #2b2b30;
+$bg-third-color: #3b3b41;
 $text-color: #fff;
 $font-size: 62.5%;
 $font-family: "Poppins", sans-serif;
-$margin-lg: 2.4rem;
-$margin-sm: 1.6rem;
-$link-color: #9473e0;
-$text-size-sm: 1.6rem;
+$margin-lg: 5.4%;
+$margin-sm: 2.6%;
+$button-color: #9473e0;
+$button-hover: #8368c3;
+$button-disabled: #3d374a;
 $text-size-lg: 2.4rem;
+$text-size-sm: 1.6rem;
+$border-radius-lg: 1rem;
+$border-radius-sm: 0.5rem;
